--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
             </tr>
           </thead>
           <tr>
+            <td><b>10s</b></td>
+            <td><b>Creating an Installable APP.</b></td>
+            <td><a href="./10/"  target="_blank">VIEW</a></td>
+          </tr>
+          <tr>
             <td>10</td>
             <td>We start with the very basics of pages. We can use whatthewebcando.today site to determine what PWA
               features it can support.</td>
-            <td><a href="./10/"  target="_blank">VIEW</a></td>
+            <td>&nbsp;</td>
           </tr>
           <tr>
             <td>11</td>
@@ -67,9 +72,13 @@
             <td><a href="./15/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
+            <td><b>20s</b></td>
+            <td><b>Creating OFFLINE access with Cache API and SW.</b></td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
             <td>20</td>
-            <td>We look at the lifecyle of a SW. In particular we look at how a new SW can be installed but not
-              activated if there are existing clients controlled by the old.</td>
+            <td>We look at the lifecyle of a SW. Anaylsing urls requested</td>
             <td><a href="./20/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
@@ -79,21 +88,24 @@
           </tr>
           <tr>
             <td>22</td>
-            <td>Using a CACHE then NETWORK strategy we can see an example of offline access for pages cached.</td>
+            <td>Our first caching strategy: CACHE or NETWORK strategy we can see an example of offline access for pages cached.</td>
             <td><a href="./22/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>23</td>
-            <td>For pages not already cached in the precaching event, we can offer a gracefullfallback page rather than
+            <td>FALLBACK PAGES: For pages not already cached in the precaching event, we can offer a gracefullfallback page rather than
               the 'dinosaur' page. We also add to our DYNAMIC CACHE any pages that we get from the network.</td>
             <td><a href="./23/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>24</td>
-            <td>Having a version number for the SW has many advantages which are explained in this lesson. We also
-              implement purging of previous caches as well as implementing a way of limiting the number of entries in
-              the dynamic cache.</td>
+            <td>LIMIT CACHE size and remove previous VERSION caches.</td>
             <td><a href="./24/" target="_blank">VIEW</a></td>
+          </tr>
+          <tr>
+            <td><b>30s</b></td>
+            <td><b>IndexedDB to store data for tmeplating.</b></td>
+            <td>&nbsp;</td>
           </tr>
           <tr>
             <td>30</td>
@@ -102,11 +114,16 @@
           </tr>
           <tr>
             <td>31</td>
-            <td>We have completed creating oru IndexedDB database and loaded in some data into a number of tables, which
+            <td>We have completed creating our IndexedDB database and loaded in some data into a number of tables, which
               we have then displayed as required.</td>
             <td><a href="./31/" target="_blank">VIEW</a></td>
           </tr>
-          <tr>
+          <!-- <tr>
+            <td><b>40s</b></td>
+            <td><b>BackgroundSync for OFFLINE POSTING</b></td>
+            <td>&nbsp;</td>
+          </tr> -->
+          <!-- <tr>
             <td>40</td>
             <td>We look at the Notification API in HTML5 and set up our form for offline functionality.</td>
             <td><a href="./40/" target="_blank">VIEW</a></td>
@@ -116,16 +133,16 @@
             <td>Using the BackgroundSync event in the SW, we can post the form when offline and be notified by a
               notification once bck online when it hwasw been sent.</td>
             <td><a href="./41/" target="_blank">VIEW</a></td>
-          </tr>
+          </tr>-->
           <tr>
-            <td>42</td>
-            <td>We add messaging from the SW to the page in addition to the notification.</td>
+            <td><b>42</b></td>
+            <td><b>We save form data to IndexedDB if offline and let BackgroundSync send it when back online. There are many ways to refactor this...</b></td>
             <td><a href="./42/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
-            <td>50</td>
-            <td>Messaging to and from the SW is set up enabling the page to make request to the SW in the 'message'
-              event.</td>
+            <td><b>50</b></td>
+            <td><b>Messaging to and from the SW is set up enabling the page to make request to the SW in the 'message'
+              event.</b></td>
             <td><a href="./50/" target="_blank">VIEW</a></td>
           </tr>
         </table>
