--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </tr>
           <tr>
             <td><b>30s</b></td>
-            <td><b>IndexedDB to store data for tmeplating.</b></td>
+            <td><b>IndexedDB to store data for templating.</b></td>
             <td>&nbsp;</td>
           </tr>
           <tr>
