--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
           </tr>
           <tr>
             <td>10</td>
-            <td>We start with the very basics of pages. We can use whatthewebcando.today site to determine what PWA
-              features it can support.</td>
+            <td>We start with the very basics of pages. We can use whatthewebcando.today site to determine what PWA features it can support. Run Lighthouse test.</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
@@ -50,20 +49,19 @@
           </tr>
           <tr>
             <td>12</td>
-            <td>We add a Service Worker file with a FETCH event. The event can be empty but a FETCH event must be in SW.
+            <td>redundant
             </td>
-            <td><a href="./12/" target="_blank">VIEW</a></td>
+            <td> <!--<a href="./12/" target="_blank">VIEW</a> --></td>
           </tr>
           <tr>
             <td>13</td>
-            <td>The SW needs to be registered just once for the site. With a manfiest files, necessary icons and a SW
-              with a fetch evetn we satisfy the requirements for an installable PWA.</td>
+            <td>We need a SW which needs to be registered just once for the site. With a manfiest files, necessary icons and a SW with a fetch evetn we satisfy the requirements for an installable PWA.</td>
             <td><a href="./13/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>14</td>
-            <td>For cross broswer support with Apple and Microsoft, we add various meta tags, icons and link tags.</td>
-            <td><a href="./14/" target="_blank">VIEW</a></td>
+            <td>redundant</td>
+           <td> <!-- <a href="./14/" target="_blank">VIEW</a> --></td>
           </tr>
           <tr>
             <td>15</td>
