--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </tr>
           <tr>
             <td>20</td>
-            <td>We look at the lifecyle of a SW. Anaylsing urls requested</td>
+            <td>We look at the lifecyle of a SW. Anaylsing urls requested. Looking at sw-patterns.</td>
             <td><a href="./20/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
