--- a/20/index.html
+++ b/20/index.html
@@ -37,12 +37,13 @@
         <h1>
           20 Demonstrate Service Worker Lifecycle.
         </h1>
+        <p>Look at various caching strategies.</p>
         <p style="color:green">This is one of the most crucial concepts and is the highest hurdle of PWA.</p>
         <p><a href="https://jakearchibald.com/2014/offline-cookbook/#on-network-response" target="_blank">Jake
           Archibald's Offline Cookbook</a> shows this and his Offline Cookbok is a great resource.</p>
+          <p><a href="https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers" target="_blank">MDN SAervice Workers</a></p>
         <p>
-          We have a very basic SW that just console.logs INSTALL and ACTIVATE. It also console.logs the FETCH event with
-          the URL requested.
+          We have a very basic SW that just console.logs INSTALL and ACTIVATE. It also console.logs the FETCH event with the URL requested.
         </p>
         <p>Refresh the page to see the FETCH in console.log</p>
         <p>Lets comment out the FETCH console.logs</p>
