--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
           </tr>
           <tr>
             <td>15</td>
-            <td>This is the final lesson int the UI section of the course. We now have a fully installable PWA which can
-              give an 'Add to Homescreen' feature.</td>
+            <td>We implement an 'Add To Homescreen' button for UX and this completes the making of an installable PWA section.</td>
             <td><a href="./15/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
@@ -76,17 +75,17 @@
           </tr>
           <tr>
             <td>20</td>
-            <td>We look at the lifecyle of a SW. Anaylsing urls requested. Looking at sw-patterns.</td>
+            <td>SW: We look at the lifecyle of a SW. Anaylsing urls requested. Looking at sw-patterns. Registering a SW.</td>
             <td><a href="./20/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>21</td>
-            <td>We can now pre-cache the app shell in the install event of the SW.</td>
+            <td>PRECACHE: We can now pre-cache the app shell in the install event of the SW.</td>
             <td><a href="./21/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>22</td>
-            <td>Our first caching strategy: CACHE or NETWORK strategy we can see an example of offline access for pages cached.</td>
+            <td>STRATEGY: Our first caching strategy: CACHE or NETWORK strategy we can see an example of offline access for pages cached.</td>
             <td><a href="./22/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
@@ -97,7 +96,7 @@
           </tr>
           <tr>
             <td>24</td>
-            <td>LIMIT CACHE size and remove previous VERSION caches.</td>
+            <td>HOUSEKEEPING: LIMIT CACHE size and remove previous VERSION caches.</td>
             <td><a href="./24/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
@@ -134,13 +133,12 @@
           </tr>-->
           <tr>
             <td><b>42</b></td>
-            <td><b>We save form data to IndexedDB if offline and let BackgroundSync send it when back online. There are many ways to refactor this...</b></td>
+            <td><b>BACKGROUNDSYNC: </b>We save form data to IndexedDB if offline and let BackgroundSync send it when back online. There are many ways to refactor this...</b></td>
             <td><a href="./42/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td><b>50</b></td>
-            <td><b>Messaging to and from the SW is set up enabling the page to make request to the SW in the 'message'
-              event.</b></td>
+            <td><b>MESSAGING: To and from the SW and page.</b></td>
             <td><a href="./50/" target="_blank">VIEW</a></td>
           </tr>
         </table>
