--- a/14/index.html
+++ b/14/index.html
@@ -60,7 +60,8 @@
   <!-- !PAGE CONTENT! -->
   <main>
     <div class="w3-card-4" style="padding:30px;margin:20px auto;max-width:1000px">
-      <h1>REPLACED BY 15</h1>
+      <h1>Additional cross browser support</h1>
+      <p>We add extra icons and meta tags for Apple and MS.</p>
     <div style="height:40px;"></div>
   </main>
   <footer>
