--- a/24/index.html
+++ b/24/index.html
@@ -36,8 +36,8 @@
         caches.</p>
       <p>We now purge old cache versions. This is best done in the ACTIVATE event as new caches can be formed in the
         INSTALL event.</p>
-      <p>We also create a function to trim the number of entries in the dynamic cache to avoid any possible storage
-        issues.</p>
+      <p>We also create a function to trim the number of entries in the dynamic cache to avoid any possible storage issues.</p>
+      <p>skipWaiting and clients.claim used.</p>
       <div class="exercise">
         <p>EX1: Change version number of SW. Notice how we get new and old caches.</p>
         <p>Uncomment cache purge function and see how old caches are removed.</p>
