--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           </tr>
           <tr>
             <td>14</td>
-            <td>redundant</td>
-           <td> <!-- <a href="./14/" target="_blank">VIEW</a> --></td>
+            <td>Add cross browser support.</td>
+           <td><a href="./14/" target="_blank">VIEW</a></td>
           </tr>
           <tr>
             <td>15</td>
