--- a/13/index.html
+++ b/13/index.html
@@ -8,36 +8,7 @@
   <link type="text/css" href="../_css/w3.css" rel="stylesheet">
   <link type="text/css" href="../_css/pwa-course.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
-    <!-- 
-      To ensure that the address bar is always themed to your colors:
-      Add a theme-color meta tag to the HTML of every page you want to brand.
-      Add the theme_color property to your Web App Manifest. 
-  -->
-  <meta name="theme-color" content="#2196f3" />
-  <!-- https://developers.google.com/web/tools/lighthouse/audits/address-bar?utm_source=lighthouse&utm_medium=devtools -->
-  <!-- Apple -->
-  <meta name="apple-mobile-web-app-title" content="wpPWA">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"> <!-- or translucent -->
-  <link rel="apple-touch-startup-image" href="images/wppwa.png">
-  <link rel="apple-touch-icon" sizes="57x57" href="images-manifest/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="images-manifest/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="images-manifest/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="images-manifest/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="images-manifest/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="images-manifest/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="images-manifest/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="images-manifest/apple-touch-icon-152x152.png">
-  <link rel="icon" type="image/png" href="images-manifest/icon-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="images-manifest/icon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="images-manifest/icon-144x144.png" sizes="144x144">
-  <link rel="icon" type="image/png" href="images-manifest/icon-128.png" sizes="128x128">
-  <!-- Microsoft -->
-  <meta name="msapplication-TileColor" content="#2D91F8">
-  <meta name="msapplication-TileImage" content="images-manifest/icons/ms-icon-144x144.png">
-  <meta name="msapplication-square70x70logo" content="images-manifest/icons/ms-icon-70x70.png">
-  <meta name="msapplication-square150x150logo" content="images-manifest/icons/ms-icon-150x150.png">
-  <meta name="msapplication-square310x310logo" content="images-manifest/icons/ms-icon-310x310.png">
+
   <title>13 PWA</title>
 </head>
 <body>
@@ -46,7 +17,7 @@
   </script>
   <nav>
     <div class="w3-container w3-blue header">
-      <img src="../images/wppwa.png" style="width:20px;height:20px;" alt="icon image">
+      <img src="../_images/wppwa.png" style="width:20px;height:20px;" alt="icon image">
       <span style="margin-left:10px;">
         <a href="index.html">HOME</a>&nbsp;&nbsp;
         <a href="articles.html">POSTS</a>&nbsp; &nbsp;
