--- a/23/index.html
+++ b/23/index.html
@@ -19,10 +19,10 @@
       <img src="../_images/wppwa.png" style="width:20px;height:20px;" alt="idon image">
       <span style="margin-left:10px;">
         <a href="index.html">HOME</a>&nbsp;&nbsp;
-        <!-- <a href="articles.html">POSTS</a>&nbsp; &nbsp;
+        <a href="articles.html">POSTS</a>&nbsp; &nbsp;
         <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp;
         <a href="form.html">FORM</a>
-      </span> -->
+      </span>
     </div>
   </nav>
   <main>
@@ -49,9 +49,6 @@
     </div>
   </footer>
   <script src="../_js/deferrred-prompt.js"></script>
-
-  <script src="../_js/gone-offline.js"></script>
-  <script src="../_js/style-offline.js"></script>
 
 </body>
 </html>
