--- a/24/index.html
+++ b/24/index.html
@@ -19,9 +19,9 @@
       <img src="../_images/wppwa.png" style="width:20px;height:20px;" alt="icon image">
       <span style="margin-left:10px;">
         <a href="index.html">HOME</a>&nbsp;&nbsp;
-        <!-- <a href="articles.html">POSTS</a>&nbsp; &nbsp;
+        <a href="articles.html">POSTS</a>&nbsp; &nbsp;
         <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp;
-        <a href="form.html">FORM</a> -->
+        <a href="form.html">FORM</a>
       </span>
     </div>
   </nav>
@@ -57,7 +57,6 @@
       <p>PWA WORKSHOP - &copy; Craig West 2020</p>
     </div>
   </footer>
-  <script src="../_js/gone-offline.js"></script>
   <script src="../_js/deferrred-prompt.js"></script>
 </body>
 </html>
