30s checked - online-offline styling added

--- a/30/idb.html
+++ b/30/idb.html
@@ -87,11 +87,16 @@
       }
     );
  
- </script><footer>
+ </script>
+ <footer>
     <div class="w3-container w3-blue w3-center footer">
       <p>PWA WORKSHOP - &copy; Craig West 2020</p>
     </div>
   </footer>
+    <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
+    <script src="../_js/style-offline.js"></script>
+    <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
+    <script src="../_js/gone-offline.js"></script>
   <script src="../_js/deferrred-prompt.js"></script>
 </body>
 </html>
