--- a/30/index.html
+++ b/30/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +12,6 @@
   <title>30 PWA</title>
 </head>
 <body>
-
   <!-- REGISTER SERVICE WORKER -->
   <script src="../_js/register-sw.js"></script>
   <nav>
@@ -37,8 +35,7 @@
       <h1>30 IndexedDBs</h1>
       <p>We look at how we can use the browser's own database, IndexedDB, to store many types of data.</p>
       <p>Combined with a template page, we can create dynamic pages whilst offline with almost instant speed.</p>
-      <p>We have cached idb.html but until it is loaded, the IndexedDB load will not have been fired. Going to idb.html
-        for the first time and offline will render the page but not the posts.</p>
+      <p>We have cached idb.html but until it is loaded, the IndexedDB load will not have been fired. Going to idb.html for the first time and offline will render the page but not the posts.</p>
       <p>In the next lesson, we preload all IndexedDB data on home page.</p>
       <br>
     </div>
@@ -49,10 +46,10 @@
       <p>PWA WORKSHOP - &copy; Craig West 2020</p>
     </div>
   </footer>
-    <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
-    <script src="../_js/style-offline.js"></script>
-    <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
-    <script src="../_js/gone-offline.js"></script>
+  <!-- MAINTAIN OFFLINE STYLE WHEN NAVIGATING OFFLINE -->
+  <script src="../_js/style-offline.js"></script>
+  <!-- RESPOND TO CHANGE IN ONLINE?OFFLINE -->
+  <script src="../_js/gone-offline.js"></script>
   <script src="../_js/deferrred-prompt.js"></script>
 </body>
 </html>
