--- a/42/article.html
+++ b/42/article.html
@@ -84,6 +84,6 @@
     <p>PWA WORKSHOP - &copy; Craig West 2020</p>
   </div>
 </footer>
-
+<script src="../_js/deferrred-prompt.js"></script>
 </body>
 </html>
