--- a/30/index.html
+++ b/30/index.html
@@ -37,6 +37,7 @@
       <p>Combined with a template page, we can create dynamic pages whilst offline with almost instant speed.</p>
       <p>We have cached idb.html but until it is loaded, the IndexedDB load will not have been fired. Going to idb.html for the first time and offline will render the page but not the posts.</p>
       <p>In the next lesson, we preload all IndexedDB data on home page.</p>
+      <p><em>Online|Offline styling added.</em></p>
       <br>
     </div>
     <div style="height:40px;"></div>
