--- a/31/article.html
+++ b/31/article.html
@@ -9,7 +9,7 @@
   <link type="text/css" href="../_css/pwa-course.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
   <!-- cross browser omitted for intermiary lessons -->
-  <title>42 ARTICLE</title>
+  <title>31 ARTICLE</title>
 
 </head>
 
@@ -26,8 +26,7 @@
       <span style="margin-left:10px;">
         <a href="index.html">HOME</a>&nbsp;&nbsp;
         <a href="articles.html">POSTS</a>&nbsp; &nbsp;
-        <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp;
-        <a href="form.html">FORM</a>
+        <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp
       </span>
     </div>
   </nav>
