--- a/31/article.html
+++ b/31/article.html
@@ -26,7 +26,8 @@
       <span style="margin-left:10px;">
         <a href="index.html">HOME</a>&nbsp;&nbsp;
         <a href="articles.html">POSTS</a>&nbsp; &nbsp;
-        <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp
+        <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp;
+        <a href="form.html">FORM</a>
       </span>
     </div>
   </nav>
