--- a/31/index.html
+++ b/31/index.html
@@ -29,7 +29,7 @@
         <a href="index.html">HOME</a>&nbsp;&nbsp;
         <a href="articles.html">POSTS</a>&nbsp; &nbsp;
         <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp;
-        <!-- <a href="form.html">FORM</a> -->
+        <a href="form.html">FORM</a>
       </span>
     </div>
   </nav>
