--- a/31/contacts.html
+++ b/31/contacts.html
@@ -23,9 +23,9 @@
      <img src="../_images/wppwa.png" style="width:20px;height:20px;"  alt="icon image">
      <span style="margin-left:10px;">
        <a href="index.html">HOME</a>&nbsp;&nbsp;
-       <a href="articles.html">POSTS</a>&nbsp; &nbsp;
-       <a href="contacts.html">CONTACTS</a>&nbsp; &nbsp;
-       <!-- <a href="form.html">FORM</a> -->
+       <a href="articles.html">POSTS</a>&nbsp;&nbsp;
+       <a href="contacts.html">CONTACTS</a>&nbsp;&nbsp;
+       <a href="form.html">FORM</a>
      </span>
    </div>
  </nav>
