--- a/21/index.html
+++ b/21/index.html
@@ -33,6 +33,7 @@
       <p>We now precache the APP SHELL (the minimum needed for a page)</p>
       <p>This is best done in the INSTALL event.</p>
       <p>In pre-caching, if there is any error in the process, no files will load.</p>
+      <p><a href="https://developer.mozilla.org/en-US/docs/Web/API/Cache/add" target="_blank">MDN Cache API</a></p>
       <div class="exercise">
         <p>EX: make a typo in filename. Clear site data, close tab and reload page. See that no files are cached. Then reverse.</p>
         <p>There will be an error in CONSOLE.</p>
