--- a/23/index.html
+++ b/23/index.html
@@ -36,7 +36,7 @@
       <p>If the page is not in cache or available from the network then the CATCH error occurs. We can server up the FALLBACK page.</p>
       <p>We have added .skipWaiting to programatically activate the new SW.</p>
       <p>We can determine the nature of the request, (HTML, CSS, image etc) and then serve back various FALLBACK pages.</p>
-      <p><em>Different fallback page for sample01.html than others.</em></p>
+      <p><em>Different fallback page for form.html than others.</em></p>
       <br>
     </div>
     </div>
