--- a/42/index.html
+++ b/42/index.html
@@ -140,7 +140,8 @@
           writeData("wpPOSTS", post);
         }
       });
-    sendMessageToSW("!!! WEB PAGE says DB loaded now...");
+    // DEMO fo sending message to SW using postMessage API
+    sendMessageToSW("!!! WEB PAGE Line 140ish says DB loaded now...");
   </script>
   <!-- LOAD CONTACTS   -->
   <script src="../_js/dexie.js"></script>
