--- a/11/index.html
+++ b/11/index.html
@@ -34,6 +34,7 @@
         <p>
           <a href="https://developers.google.com/web/fundamentals/app-install-banners"
             target="_blank">https://developers.google.com/web/fundamentals/app-install-banners</a></p>
+        <p><a href="https://web.dev/install-criteria/">Installable criteria</a></p>
         <p>Tools to develop manifest file and icons:</p>
         <p><a href="https://www.pwabuilder.com/" target="_blank">https://www.pwabuilder.com/</a></p>
         <p><a href="https://tomitm.github.io/appmanifest/" target="_blank">https://tomitm.github.io/appmanifest/</a></p>
