--- a/50/index.html
+++ b/50/index.html
@@ -67,7 +67,7 @@
           <h3>50 FINAL VERSION</h3>
           <p>Add to Homescreen/Desktop installation.</p>
           <p>Open with Native App UI.</p>
-          <p>Enable Notifications</p>
+          <p>Enable Notifications.</p>
           <p>Service Worker with CacheAndNetworkThenStoreOrFallback strategy.</p>
           <p>Use of Cache API to store pages initially and dynamically.</p>
           <p>Detect ONLINE | OFFLINE status and notify user via styling and OFFLINE message.</p>
